--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.11.3)
 
 # set(CMAKE_CXX_STANDARD 17)
-project(OSM_A_star_search)
+set(TARGET my_place_map)
+
+project(${TARGET})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
 
 find_package(OpenCV 4.1 REQUIRED)
@@ -11,8 +13,15 @@ link_directories(${OpenCV_LIBRARY_DIRS})
 add_definitions(${OpenCV_DEFINITIONS})
 
 # Find all executables
-file(GLOB project_SRCS src/*.cpp) #src/*.h
+file(GLOB project_SRCS
+        src/main.cpp
+        src/my_intersection.cpp
+        src/my_object.cpp
+        src/my_street.cpp
+        src/my_vehicle.cpp
+        src/my_window_manager.cpp
+        )
 
 # Add project executable
-add_executable(traffic_simulation ${project_SRCS})
-target_link_libraries(traffic_simulation ${OpenCV_LIBRARIES})
+add_executable(${TARGET} ${project_SRCS})
+target_link_libraries(${TARGET} ${OpenCV_LIBRARIES})
